<resources>
    <string name="app_name">Aplikasi ColorMyView - Rizuki</string>
    <string name="box_one">Box One</string>
    <string name="box_three">Box Three</string>
    <string name="box_two">Box Two</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="how_to_play">How to Play :</string>
    <string name="label_info">Tap the sreen and buttons.</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
    <string name="check_box_one">Box One</string>
    <string name="check_box_two">Box Two</string>
    <string name="check_box_three">Box Three</string>
    <string name="check_box_four">Box Four</string>
    <string name="check_box_five">Box Five</string>
</resources>